<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/img_none"
        android:scaleType="matrix"
        android:src="@drawable/oak_barrels" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="100dp"
                    android:layout_height="270dp"
                    android:layout_alignParentLeft="false"
                    android:contentDescription="@string/img_none"
                    android:paddingLeft="20dp"
                    android:paddingTop="100dp"
                    android:scaleType="centerCrop" />

                    <TableLayout
                        android:id="@+id/info_module_wod_statistics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="18dp"
                        android:paddingRight="18dp"
                        android:paddingTop="@dimen/default_padding"
                        android:shrinkColumns="*" 
                    	android:layout_toRightOf="@id/imageView2">

                        <TextView
                            android:id="@+id/info_module_wod_statistics_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/module_titlebar"
                            android:orientation="vertical"
                            android:text="@string/info_information"
                            android:textColor="@color/white" />
                    </TableLayout>
            </RelativeLayout>
        </ScrollView>

        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:background="@drawable/bg_winered_rounded"
	        android:orientation="horizontal" 
	        android:layout_alignBottom="@id/scrollView">
	
	        <Button
	            android:id="@+id/info_button_add_wishlist"
	            style="@style/ButtonTextInfo"
	            android:layout_width="70dp"
	            android:layout_height="40dp"
	            android:background="@color/transparent"
	            android:gravity="center"
	            android:text="@string/info_add_wishlist" />
	
	        <Button
	            android:id="@+id/info_button_add_cellar"
	            style="@style/ButtonTextInfo"
	            android:layout_width="70dp"
	            android:layout_height="40dp"
	            android:background="@drawable/info_nav_border"
	            android:text="@string/info_add_cellar" />
	
	        <Button
	            android:id="@+id/info_button_more_info"
	            style="@style/ButtonTextInfo"
	            android:layout_width="72dp"
	            android:layout_height="40dp"
	            android:background="@drawable/info_nav_border"
	            android:text="@string/more_info" />
	
	        <Button
	            android:id="@+id/info_button_purchase"
	            style="@style/ButtonTextInfo"
	            android:layout_width="72dp"
	            android:layout_height="40dp"
	            android:background="@color/transparent"
	            android:onClick="openInBrowser"
	            android:text="@string/info_buy" />
    	</LinearLayout> 
    </RelativeLayout>


 

</LinearLayout>