<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerWindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@color/almostwhite"
    android:minHeight="430dp"
    android:orientation="vertical"
    android:visibility="visible" >

    <!-- register THROUGH EMAIL -->
    <EditText style="@style/LoginField"
        android:id="@+id/register_email"        
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText style="@style/LoginField"
        android:id="@+id/register_password"
       	android:layout_below="@+id/register_email"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginLeft="@dimen/default_padding"   
        android:layout_marginRight="@dimen/default_padding"
        android:inputType="textPassword"    		          	
        android:hint="@string/password" />

    <TextView android:id="@+id/register_error" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"   
        android:gravity="center"     
        android:layout_marginLeft="@dimen/default_padding"   
        android:layout_marginRight="@dimen/default_padding"             
        android:textColor="@color/red"
        android:layout_below="@+id/register_password"
        android:textSize="12sp"
        android:textStyle="bold"/>
    
    <Button
        android:id="@+id/register_submit"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_error"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginLeft="@dimen/default_padding"   
        android:layout_marginRight="@dimen/default_padding"  
        android:background="@drawable/btn_winered"
        android:fontFamily="sans-serif"
        android:text="@string/create_account_button" />
</RelativeLayout>