<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/img_none"
        android:scaleType="matrix"
        android:src="@drawable/grapes" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageView2"
        android:orientation="vertical" >

        <TableLayout
            android:id="@+id/info_module_winery_visit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingTop="@dimen/default_padding" 
            android:shrinkColumns="*" >

            <TextView
                android:id="@+id/info_module_statistics_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/module_titlebar"
                android:orientation="vertical"
                android:text="@string/info_visit"
                android:textColor="@color/white" 
                android:autoLink="phone"/>
        </TableLayout>
        
        <TableLayout
        android:id="@+id/info_module_winery_vineyard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="@dimen/default_padding" 
        android:layout_below="@id/info_module_winery_visit" 
        android:shrinkColumns="*" >

	        <TextView
	            android:id="@+id/info_module_descriptors_title"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="@drawable/module_titlebar"
	            android:orientation="vertical"
	            android:text="@string/info_vineyard"
	            android:textColor="@color/white" />
   		</TableLayout>
   		
    </RelativeLayout>

    </ScrollView>

</LinearLayout>