<!-- Layout for the intro (guest) screen. --> 
<!-- Prompts login/register, or allows fast pass to browse page -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intro_layout" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/guest_transition1"  
    tools:context=".Intro" >
    
    <LinearLayout
        android:id="@+id/intro_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

 	<ImageView
 	    android:id="@+id/winetastic_logo"
 	    android:layout_width="170dp"
 	    android:layout_height="wrap_content"
 	    android:layout_margin="0dp"	    
 	    android:adjustViewBounds="true"
 	    android:contentDescription="@string/app_name"
 	    android:gravity="right"
 	    android:scaleType="fitStart"
 	    android:src="@drawable/winetastic_logo" />
 	

	
	<Button
	    android:id="@+id/guest_register_button"
	    style="@style/GuestButtonText"
	    android:fontFamily="sans-serif"
	    android:text="@string/register" />	
	    
	
	</LinearLayout>
    
 	<RelativeLayout
	    android:layout_width="match_parent" 
		android:layout_height="130dp" 	
		android:gravity="center"    	    
 	    android:layout_alignParentBottom="true" >
	    <!-- Goes directly to the browse/search page -->
	    
	   <ImageView
	        android:id="@+id/guest_find_wines"
	        android:background="@drawable/winelabel_blank" 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"     
		    android:layout_marginTop="0dp"
		    android:layout_marginLeft="0dp" 
		    android:padding="37dp"
			android:src="@drawable/findawine"		    
	        android:textSize="50sp"            
	                />
<!-- 	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:contentDescription="@string/find_wines"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"	        
	        android:scaleType="center"
	        android:src="@drawable/findawine" /> -->
	    <Button
	        android:id="@+id/guest_login_textlink"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_marginTop="88dp"
	        android:background="@color/transparent"
	        android:fontFamily="sans-serif-light"
	        android:onClick="showLogin"
	        android:paddingBottom="20dp"
	        android:text="@string/guest_login"
	        android:textColor="@color/charcoal"
	        android:textSize="14sp" >
	        
	    </Button>

	</RelativeLayout>	                


	<!-- TODO: Remove these buttons on launch -->
<!-- 	<Button
		android:id="@+id/guest_home_button"
		android:background="@drawable/btn_winered"      
	    style="@style/ButtonText.guest"         
		android:fontFamily="sans-serif-condensed"
		android:text="@string/guest_goto_home"
		
		android:visibility="visible" />	 -->
		
<!-- 	<Button
		android:id="@+id/guest_map"
		android:background="@drawable/btn_winered"   
		android:layout_below="@+id/guest_home_button"   
	    style="@style/ButtonText.guest"         
		android:fontFamily="sans-serif-condensed"
		android:text="@string/map_title"
		android:onClick="gotoMap"
		
		android:visibility="visible" />	 -->

</RelativeLayout>